# java-typst

./: .gitignore  LICENSE  README.md  pom.xml
.github/workflows/: ci.yml  release.yml
native/: Cargo.toml
native/src/: cache.rs  diagnostics.rs  engine.rs  fonts.rs  lib.rs  packages.rs  result.rs  vfs.rs  world.rs
scripts/: copy-native-lib.sh
src/main/java/name/velikodniy/vitaliy/typst/: HttpPackageResolver.java  TypstCompilationException.java  TypstDiagnostic.java  TypstEngine.java  TypstEngineException.java  TypstException.java  TypstNativeException.java  TypstPackageNotFoundException.java  TypstPackageResolver.java  TypstTemplate.java
src/main/java/name/velikodniy/vitaliy/typst/internal/: DataSerializer.java  NativeLibLoader.java  PackageManager.java  TypstNative.java
src/test/java/name/velikodniy/vitaliy/typst/: HttpPackageResolverTest.java  PdfAssert.java  TypstCacheTest.java  TypstCustomRegistryTest.java  TypstEngineLifecycleTest.java  TypstEngineTest.java  TypstErrorTest.java  TypstExceptionTest.java  TypstFontTest.java  TypstTemplateTest.java  TypstThreadSafetyTest.java
src/test/java/name/velikodniy/vitaliy/typst/internal/: DataSerializerTest.java  NativeLibLoaderTest.java  PackageManagerTest.java
src/test/resources/templates/: cyrillic.typ  error.typ  large.typ  nested.typ  simple.typ  table.typ
