[package]
name = "typst-java"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
typst = "0.14"
typst-pdf = "0.14"
typst-assets = { version = "0.14", features = ["fonts"] }
typst-kit = { version = "0.14", default-features = false, features = ["fonts"] }
serde_json = "1"
parking_lot = "0.12"
ureq = { version = "2", default-features = false, features = ["tls"] }
tar = "0.4"
flate2 = "1"
chrono = "0.4"
comemo = "0.4"
ttf-parser = "0.25"
ecow = "0.2"
dirs = "6"

[profile.release]
lto = true
codegen-units = 1
strip = true
