[package]
name = "typst-java"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
typst = "0.14"
typst-pdf = "0.14"
typst-assets = { version = "0.14", features = ["fonts"] }
serde_json = "1"
parking_lot = "0.12"
chrono = "0.4"
ttf-parser = "0.25"
ecow = "0.2"

[dev-dependencies]
tar = "0.4"
flate2 = "1"
dirs = "6"

[profile.release]
lto = true
codegen-units = 1
strip = true
